--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href=""> <img src="./images/Logo2.png" alt=""></a>
+        <a class="logo" href=""> <img src="./images/Logo2.png" alt="" /></a>
         <a href="">Desitnations</a>
         <a href="">Hotels</a>
         <a href="">Flights</a>
         <a href="">Bookings</a>
         <a href="">Login</a>
         <a class="sign-up" href="">Sign up</a>
-        <select name="language" id="language"><option value="EN">EN</option><option value="EN">VI</option></select>
-
+        <select name="language" id="language">
+          <option value="EN">EN</option>
+          <option value="EN">VI</option>
+        </select>
       </nav>
     </header>
     <section class="hero">
@@ -51,6 +53,7 @@
           <button>Find out more</button>
           <div class="button-play"><i class="fa-solid fa-play"></i></div>
           <span>Play demo</span>
+        </div>
       </div>
     </section>
     <section class="category">
@@ -60,68 +63,128 @@
         <div class="set-card">
           <div class="bg-img"></div>
           <div class="card card-1">
-            <div class="img"><img src="/images/1-weather.png" alt=""></div> 
+            <div class="img"><img src="/images/1-weather.png" alt="" /></div>
             <h4>Calculated Weather</h4>
             <p>Built Wicket longer admire do barton vanity itself do in it.</p>
           </div>
           <div class="card card-2">
-            <div class="img"><img src="/images/2-flights.png" alt=""></div> 
+            <div class="img"><img src="/images/2-flights.png" alt="" /></div>
             <h4>Best Flights</h4>
             <p>Engrossed listening. Park gate sell they west hard for the.</p>
           </div>
           <div class="card card-3">
-            <div class="img"><img src="/images/3-events.png" alt=""></div> 
+            <div class="img"><img src="/images/3-events.png" alt="" /></div>
             <h4>Local Events</h4>
-            <p>Barton vanity itself do in it. Preferd to men it engrossed listening.</p>
+            <p>
+              Barton vanity itself do in it. Preferd to men it engrossed
+              listening.
+            </p>
           </div>
           <div class="card card-4">
-            <div class="img"><img src="/images/4-custom.png" alt=""></div> 
+            <div class="img"><img src="/images/4-custom.png" alt="" /></div>
             <h4>Customization</h4>
-            <p>We deliver outsourced aviation services for military customers</p>
+            <p>
+              We deliver outsourced aviation services for military customers
+            </p>
           </div>
         </div>
       </div>
-
 
       <div class="set2">
         <h3>Top Selling</h3>
         <h2>Top Destinations</h2>
         <div class="set-card-B">
-
           <div class="card-B">
-            <div class="img-B"><img src="/images/5-rome.png" alt=""></div> 
+            <div class="img-B"><img src="/images/5-rome.png" alt="" /></div>
             <div class="card-info">
               <div class="note">
-                <p>Rome, Italy</p> <span>$5,42k</span>
+                <p>Rome, Italy</p>
+                <span>$5,42k</span>
               </div>
               <p><i class="fa-solid fa-location-arrow"></i>10 Days Trip</p>
             </div>
           </div>
 
           <div class="card-B">
-            <div class="img-B"><img src="/images/6-london.png" alt=""></div> 
+            <div class="img-B"><img src="/images/6-london.png" alt="" /></div>
             <div class="card-info">
               <div class="note">
-                <p>London, UK</p> <span>$4,4k</span>
+                <p>London, UK</p>
+                <span>$4,4k</span>
               </div>
               <p><i class="fa-solid fa-location-arrow"></i>12 Days Trip</p>
             </div>
           </div>
 
           <div class="card-B">
-            <div class="img-B"><img src="/images/7-eu.png" alt=""></div> 
+            <div class="img-B"><img src="/images/7-eu.png" alt="" /></div>
             <div class="card-info">
               <div class="note">
-                <p>Full Europe</p> <span>$15k</span>
+                <p>Full Europe</p>
+                <span>$15k</span>
               </div>
               <p><i class="fa-solid fa-location-arrow"></i>28 Days Trip</p>
             </div>
           </div>
-
-          
-         </div>
-      </section>
+        </div>
       </div>
-     
+    </section>
+
+    <footer>
+      <section class="footer-1">
+        <h2>Jadoo.</h2>
+        <p>Book your trip in minute, get full Control for much longer.</p>
+      </section>
+      <section class="footer-2">
+        <div>
+          <h3>Company</h3>
+          <nav>
+            <ul>
+              <li><a href="">About</a></li>
+              <li><a href="">Careers</a></li>
+              <li><a href="">Mobile</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div>
+          <h3>Contact</h3>
+          <nav>
+            <ul>
+              <li><a href="">Help/FAQ</a></li>
+              <li><a href="">Press</a></li>
+              <li><a href="">Affilates</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div>
+          <h3>More</h3>
+          <nav>
+            <ul>
+              <li><a href="">Airlinefees</a></li>
+              <li><a href="">Airline</a></li>
+              <li><a href="">Low fare tips</a></li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+      <section class="footer-3">
+        <div class="btn">
+          <div class="social-button" href="">
+            <i class="fa-brands fa-facebook-f" style="color: #000000"></i>
+          </div>
+          <div class="social-button social-button-2" href="">
+            <i class="fa-brands fa-instagram" style="color: #ffffff"></i>
+          </div>
+          <div class="social-button" href="">
+            <i class="fa-brands fa-twitter" style="color: #000000"></i>
+          </div>
+        </div>
+        <div class="app">
+          <p><strong>Discover our app</strong></p>
+          <div class="Discover"><img src="/images/ch-play.png" alt="" /></div>
+          <div class="Discover"><img src="/images/apple.png" alt="" /></div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
