--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
       </section>
       <section class="footer-3">
         <div class="btn">
-          <div class="social-button" href="">
+          <div class="" href="">
             <i class="fa-brands fa-facebook-f" style="color: #000000"></i>
           </div>
-          <div class="social-button social-button-2" href="">
+          <div class="social-button-2" href="">
             <i class="fa-brands fa-instagram" style="color: #ffffff"></i>
           </div>
-          <div class="social-button" href="">
+          <div class="" href="">
             <i class="fa-brands fa-twitter" style="color: #000000"></i>
           </div>
         </div>
@@ -186,5 +186,6 @@
         </div>
       </section>
     </footer>
+    <section class="source"><p>All rights reserved@jadoo.co</p></section>
   </body>
 </html>
