--- a/bt-1 Circle.html
+++ b/bt-1 Circle.html
@@ -27,7 +27,8 @@
         element.style.width = this.diameter + "px";
         element.style.height = this.diameter + "px";
         element.style.borderRadius = this.diameter + "px";
-        element.style.background = "blueviolet";
+        element.style.background =
+          "linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%)";
       };
     }
 
