--- a/bt-1.html
+++ b/bt-1.html
@@ -26,7 +26,9 @@
       this.drawing = (element) => {
         element.style.width = this.width + "px";
         element.style.height = this.length + "px";
-        element.style.background = "blueviolet";
+
+        element.style.background =
+          "linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%)";
       };
     }
     const Rectangle1 = new Rectangle(4, 5);
