--- a/register.html
+++ b/register.html
@@ -129,7 +129,8 @@
           user.date = "";
           user.add = "";
           user.phone = "";
-          user.img = "";
+          user.img =
+            "https://www.getillustrations.com/photos/pack/video/55895-3D-AVATAR-ANIMATION.gif";
           usersDB.push(user);
 
           //   B6: Đẩy dữ liệu lên localStorage
