--- a/Admin/LoginAdmin.html
+++ b/Admin/LoginAdmin.html
@@ -49,7 +49,9 @@
       </nav>
     </ul>
     <form>
-      <h3 style="text-align: center; padding: 20px">ĐĂNG NHẬP ADMIN</h3>
+      <h3 style="text-align: center; padding: 20px">
+        ĐĂNG NHẬP - QUẢN TRỊ VIÊN
+      </h3>
       <div class="mb-3">
         <label for="email" class="form-label">Email</label>
         <input
