--- a/Admin/adminManagePage.html
+++ b/Admin/adminManagePage.html
@@ -160,7 +160,7 @@
                   <input type="text" id="id-admin" disabled /> -->
               <br />
               <label for="email-admin">Email</label>
-              <input type="text" id="email-admin" readonly />
+              <input type="text" id="email-admin" disabled />
               <br />
               <label for="role-admin">Phân quyền quản trị </label>
               <br />
