--- a/register.html
+++ b/register.html
@@ -95,7 +95,7 @@
       // Runn ______________________________________________________________________________________________________________________________________________________________________________________________________
       const form = document.querySelector("form");
       form.addEventListener("submit", (event) => {
-        // Lỗi thì ngưng chạy
+        // // Lỗi thì ngưng chạy
         event.preventDefault();
 
         // B2: Lấy thông tin từ form
