--- a/BuyerOrderPage.html
+++ b/BuyerOrderPage.html
@@ -609,7 +609,7 @@
         data-bs-toggle="modal" data-bs-target="#modalCarts"
                      onclick="handleCheckCarts()"
                    >
-                   Giỏ Hàng (<span color="red" id="cartValue">${carts.length}</span>)
+                   Giỏ Hàng <span color="red" id="cartValue">${carts.length}</span>
                    </button>
                  </li>
                  <li class="nav-item">
@@ -795,7 +795,11 @@
       let productsSearch = [];
 
       products.forEach((product) => {
-        if (product.name.toUpperCase().includes(inputvalue.toUpperCase())) {
+        if (
+          removeAccents(product.name)
+            .toUpperCase()
+            .includes(removeAccents(inputvalue).toUpperCase())
+        ) {
           console.log(product);
           productsSearch.push(product);
         }
@@ -881,6 +885,7 @@
 
       // totalOrderElement.innerHTML = order?.totalPrice;
     }
+
     function AddButtonCart(productId, productQuantity) {
       let carts = JSON.parse(localStorage.getItem("carts"));
       carts.forEach((cartProduct) => {
@@ -889,11 +894,12 @@
         }
       });
       localStorage.setItem("carts", JSON.stringify(carts));
+      renderButtonHeader();
 
       renderModal(carts);
     }
     function SubButtonCart(productId, productQuantity) {
-      if (productQuantity >= 1) {
+      if (productQuantity > 1) {
         let carts = JSON.parse(localStorage.getItem("carts"));
         carts.forEach((cartProduct) => {
           if (cartProduct.id == productId) {
@@ -901,7 +907,18 @@
           }
         });
         localStorage.setItem("carts", JSON.stringify(carts));
+        renderButtonHeader();
 
+        renderModal(carts);
+      } else {
+        let carts = JSON.parse(localStorage.getItem("carts"));
+        carts.forEach((cartProduct, i) => {
+          if (cartProduct.id == productId) {
+            carts.splice(i, 1);
+          }
+        });
+        localStorage.setItem("carts", JSON.stringify(carts));
+        renderButtonHeader();
         renderModal(carts);
       }
     }
@@ -1010,6 +1027,14 @@
       totalOrderElement.innerHTML = totalShow + "đ";
       statusOrderElement.innerHTML = status;
       // cartsOrderlistElement.innerHTML = order?.carts;
+    }
+
+    function removeAccents(str) {
+      return str
+        .normalize("NFD")
+        .replace(/[\u0300-\u036f]/g, "")
+        .replace(/đ/g, "d")
+        .replace(/Đ/g, "D");
     }
   </script>
 </html>
